# chip-8-emulator

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: chip_8.rs  lib.rs  main.rs  opcodes.rs  renderer.rs
src/chip_8/: instruction.rs  instructions.rs  keycode.rs  keypad.rs  memory.rs  mod.rs  screen.rs  sound.rs  stack.rs
src/chip_8/instructions/: execution.rs  mod.rs
