[package]
name = "chip_8_emulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.12", features = ["derive"] }
env_logger = "0.11.3"
log = "0.4.20"
pixels = "0.13.0"
rand = "0.8.5"
thiserror = "1.0.53"
winit = "0.28.7"                                     # 0.30.0 is AWFUL
winit_input_helper = "0.14.1"                        # DO NOT CHANGE THIS ONE EITHER
