[package]
name = "chip_8_emulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.12", features = ["derive"] }
env_logger = "0.11.3"
log = "0.4.20"
rand = "0.8.5"
thiserror = "1.0.53"
minifb = "0.27.0"
crossbeam-channel = "0.5.13"
